# agent-trace

./: .gitignore  README.md  article-juejin.md  pyproject.toml
agent_trace/: __init__.py  cli.py  span.py  tracer.py
agent_trace/dashboard/: app.py
agent_trace/dashboard/templates/: index.html
agent_trace/integrations/: __init__.py  openai.py
agent_trace/storage/: __init__.py  memory.py  sqlite.py
examples/: openai_integration.py  quickstart.py
